# parameter-framework-samples

./: CMakeLists.txt  README.md
alsa-tutorial/: AlsaSubsystem.xml  AudioStructure.xml  ParameterFrameworkConfiguration.xml  README.md
asus-t100-tutorial/: AudioCriteria.txt  README.md
asus-t100-tutorial/Settings/Audio/: AudioConfigurableDomains-Tuning.xml  AudioConfigurableDomains.xml
asus-t100-tutorial/Structure/Audio/: AudioClass.xml  Realtek5640Subsystem.xml  Realtek564xSubsystem-common.xml  SstSubsystem.xml
asus-t100-tutorial/Structure/Audio/intel/: Dcr.xml  Gain.xml  Lpro.xml  Mdrc.xml  SbaEqualizers.xml  SbaFir.xml  SbaIir.xml
asus-t100-tutorial/clientSimulator/: AudioCriteria.txt  README.md  bytcr-rt5640-default.pfw  gen_xml.sh  routing_sst.pfw
asus-t100-tutorial/clientSimulator/scripts/common/: audio-test-actions.json
asus-t100-tutorial/clientSimulator/scripts/common/test-scripts/: capture.sh  play.sh
asus-t100-tutorial/clientSimulator/scripts/t100/: audio-test-scripts.json  conf.json
asus-t100-tutorial/clientSimulator/scripts/t100/test-vectors/: capture_alsa_Media_Headset.json  playback_alsa_DeepMedia_Speakers.json  playback_alsa_Hdmi.json  playback_alsa_Media_Headset.json  playback_alsa_Media_Speakers.json  reset_routes.json
asus-t100-tutorial/tuning_topology/: README.md  layout_topology.xml  layout_types.xml  layout_ui.xml
asus-t100-tutorial/xmlGenetaror/: AudioConfigurableDomainsRealtek564x-Tuning.xml  README.md  SstDefaultGains.xml  SstMediaLoop1Fir.xml  SstMediaLoop1Iir.xml  SstMediaLoop1Mdrc.xml  SstMediaLoop2Fir.xml  SstMediaLoop2Iir.xml  SstMediaLoop2Mdrc.xml  bytcr-rt5640-default.pfw  gen_xml.sh
core-tutorial/: CMakeLists.txt  ParameterFrameworkConfiguration.xml
core-tutorial/Settings/: Genres.xml
core-tutorial/Structure/: MusicLibraries.xml  MyMusic.xml  MyMusic.xml.in
example-music/: CMakeLists.txt  ParameterFrameworkConfiguration.xml  README.md  installExample.sh
example-music/Settings/FS/: Genres.xml
example-music/Settings/MusicLibrary/: Genres.xml
example-music/Structure/FS/: MusicLibraries.xml  my_music.xml
example-music/Structure/MusicLibrary/: MusicLibraries.xml  my_music.xml
nuc-tutorial/: AudioCriteria.txt  AudioParameterFramework.xml  README.md
nuc-tutorial/clientSimulator/: README.md
nuc-tutorial/clientSimulator/scripts/nuc/: audio-test-scripts.json  conf.json
nuc-tutorial/clientSimulator/scripts/nuc/test-vectors/: capture_alsa_Media_Headset.json  playbackRecord_on_alsa_Media_Hdmi.json  playback_alsa_Hdmi.json  playback_alsa_Media_Headset.json
nuc-tutorial/tuning_topology/: README.md
nuc-tutorial/xmlGenerator/: README.md  gen_xml.sh  routing_alc283.pfw  routing_hdmi.pfw
omap-tutorial/: PandaBoard5.xml  PandaBoardES.xml  README.md
omap-tutorial/Settings/Audio/: AudioConfigurableDomains.xml
omap-tutorial/Structure/Audio/: Omap4Class.xml  Omap5Class.xml  OmapAbeComponentTypeSet.xml  PandaBoard5SubSystem.xml  PandaBoardESSubSystem.xml  Twl6040ComponentTypeSet.xml
omap-tutorial/clientSimulator/: AudioCriteria.txt  README.md  routing_omapabe.pfw  routing_twl6040.pfw
omap-tutorial/clientSimulator/scripts/: README.md
omap-tutorial/clientSimulator/scripts/common/test-scripts/: capture.sh  play.sh
omap-tutorial/clientSimulator/scripts/panda/: audio-test-scripts.json  conf.json
omap-tutorial/clientSimulator/scripts/panda/test-vectors/: capture_alsa_Media_Headset.json  playback_alsa_DeepMedia_Headset.json  playback_alsa_Media_Headset.json  playback_alsa_Tones_Headset.json  playback_alsa_Voice_Headset.json
